# tauri-plugin-unified-log

./: .gitignore  Cargo.toml  LICENSE  LISCENSE  README.md  README_PACKAGE.md  build.rs  package.json  pnpm-lock.yaml
examples/react/: package.json
examples/react/src/: main.tsx
examples/react/src-tauri/: Cargo.toml
examples/tauri-app/: package.json
examples/tauri-app/src/: main.js
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-react/: package.json  pnpm-lock.yaml
examples/tauri-react/src/: App.tsx
examples/tauri-react/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-react/src-tauri/capabilities/: default.json
examples/tauri-react/src-tauri/src/: lib.rs
examples/tauri-svelte/: package.json  pnpm-lock.yaml
examples/tauri-svelte/src/: App.svelte  main.js
examples/tauri-svelte/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-svelte/src-tauri/src/: lib.rs  main.rs
guest-js/: README.md  index.ts  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: log_terminal.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  logger.rs  types.rs  utils.rs
